--- a/index.html
+++ b/index.html
@@ -262,5 +262,54 @@
             </div>
         </div>
      </section>
+
+     <footer>
+        <div class="footer-left">
+            <div class="left-top">
+                <img src="/Exercise4/images/StudySyn.svg" alt="Logo">
+                <h2>StudySync</h2>
+            </div>
+            <div class="left-mid">
+                <p>Seamless Learning for Brighter Futures.</p>
+            </div>
+            <div class="left-btm">
+                <img src="/Exercise4/images/instagram.svg" alt="">
+                <img src="/Exercise4/images/linkedin.svg" alt="">
+                <img src="/Exercise4/images/Microsoft.svg" alt="">
+                <img src="/Exercise4/images/twitter.svg" alt="">
+            </div>
+        </div>
+
+        <div class="footer-right">
+            <div class="footer-tags">
+                <h4>Products</h4>
+                <a href="">Overview</a>
+                <a href="">Solutions</a>
+                <a href="">Pricing</a>
+                <a href="">Customers</a>
+            </div>
+            <div class="footer-tags">
+                <h4>Products</h4>
+                <a href="">Overview</a>
+                <a href="">Solutions</a>
+                <a href="">Pricing</a>
+                <a href="">Customers</a>
+            </div>
+            <div class="footer-tags">
+                <h4>Products</h4>
+                <a href="">Overview</a>
+                <a href="">Solutions</a>
+                <a href="">Pricing</a>
+                <a href="">Customers</a>
+            </div>
+            <div class="footer-tags">
+                <h4>Products</h4>
+                <a href="">Overview</a>
+                <a href="">Solutions</a>
+                <a href="">Pricing</a>
+                <a href="">Customers</a>
+            </div>
+        </div>
+     </footer>
 </body>
 </html>
